--- a/CryptoGenesis Core.csproj
+++ b/CryptoGenesis Core.csproj
@@ -2,9 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>9b61380c-55a3-4704-bc6c-36217a286f35</UserSecretsId>
+    <AssemblyName>CryptoGenesis_Core</AssemblyName>
+    <RootNamespace>CryptoGenesis_Core</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove=".gitattributes" />
+    <None Remove=".gitignore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.31" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
